[metadata]
name = rockit
version = 0.0.1
author = Jean Bilheux and Yuxuan Zhang
description = Neutron imaging data analysis at ORNL
keywords = Neutron imaging
long_description = file: README.md, LICENSE
license = BSD 3-Clause License
url = https://github.com/ornlneutronimaging/rockit
project_urls =
    Bug Tracker = https://github.com/ornlneutronimaging/rockit/issues
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    = rockit
packages = find:
python_requires = >= 3.8
install_requires =
    argparse
    dxchange
    tomopy
    numpy
    bm3d-streak-removal

[options.packages.find]
where = rockit
exclude =
    notebooks
    autoreduce

[options.extras_require]
tests = pytest

[aliases]
test = pytest

[flake8]
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 120

[tool:pytest]
testpaths = tests
python_files = *test*.py
norecursedirs = .git tmp* _tmp* __pycache__ *dataset* *data_set*

[coverage:run]
source = rockit/rockit_cli
